--- a/newtheme/style.css
+++ b/newtheme/style.css
@@ -5,5 +5,12 @@ Author: Tafadzwa Mudiviri
 */
 
 body {
-    background:green;
+    background:#e7e7e7;
+}
+
+
+header {
+    background:#fff;
+    width:100%;
+    height:100px;
 }
